Atualização no espaçamento na responsividade mobile e carga horária nos cursos

--- a/index.html
+++ b/index.html
@@ -89,9 +89,18 @@
                             <span class="top-right"></span>
                             <h2>Cursos</h2>
                             <ul>
-                                <li>FullStack Master - Danki Code (Cursando)</li>
-                                <li>Informática Empresarial - All Net (2020)</li>
-                                <li>Práticas Administrativas - Associação Obra do Berço (2019)</li>
+                                <li>
+                                    Full Stack Master - Danki Code (Cursando)
+                                    <p>Carga horária: Indefinido</p>
+                                </li>
+                                <li>
+                                    Informática Empresarial - All Net (2020)
+                                    <p>Carga horária: 120 Horas</p>
+                                </li>
+                                <li>
+                                    Práticas Administrativas - Associação Obra do Berço (2019)
+                                    <p>Carga horária: 480 Horas</p>
+                                </li>
                             </ul>
                             <span class="bottom-left"></span>
                         </section>
@@ -113,17 +122,20 @@
                                 <ol>
                                     <li>Voluntariado.</li>
                                     <li>Construção do projeto de vida.</li>
-                                    <li>Observatóiros corporativos:</li>
+                                    <li>
+                                        Observatóiros corporativos:
                                         <ul>
                                             <li><p>Alpargatas</p></li>
                                             <li><p>Faculdade de Tecnologia SENAI Anchieta</p></li>
                                             <li><p>Faculdade de Produção Têxtil e Vestuário SENAI Francisco Matarazzo</p></li>
                                             <li><p>Rádio Gazeta (Faculdade Cásper Líbero)</p></li>
                                         </ul>
-                                    <li>Participação de Mentoria:</li>
-                                    <ul>
-                                        <li><p>Instituto InterCement</p></li>
-                                    </ul>
+                                    </li>
+                                    <li>Participação de Mentoria:
+                                        <ul>
+                                            <li><p>Instituto InterCement</p></li>
+                                        </ul>
+                                    </li>
                                 </ol>
                             <span class="bottom-left"></span>
                         </section>
