Att PDF e formatações

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   <li>Python</li>
                   <li>Pacote Office</li>
                   <li>Desenvolvedor Front-End</li>
-                  <li>ReactJs (Vite/NextJs)</li>
+                  <li>ReactJs</li>
                 </ul>
                 <span class="bottom-left"></span>
               </section>
@@ -141,18 +141,25 @@
                 <h2>Experiência Profissional</h2>
                 <ul>
                   <li>
-                    <strong>Ability Tecnologia - Vendedor PaP Tim UltraFibra</strong>
+                    <strong
+                      >Ability Tecnologia - Vendedor PaP Tim UltraFibra</strong
+                    >
                     <p>Inicio: 05/2024</p>
-                    Atendimento residencial para fornecimento de serviços de rede Wifi.
+                    Atendimento residencial para fornecimento de serviços de
+                    rede Wifi.
                   </li>
                   <li>
-                    <strong>Supermercado Supribem - Aprendiz Administrativo</strong>
+                    <strong
+                      >Supermercado Supribem - Aprendiz Administrativo</strong
+                    >
                     <p>10/2022 até 02/2024</p>
                     Administração de cadastro, atualização e remoção de
                     mercadorias de venda.
                   </li>
                   <li>
-                    <strong>Batista Agronegócio - Assistente Administrativo</strong>
+                    <strong
+                      >Batista Agronegócio - Assistente Administrativo</strong
+                    >
                     <p>08/2021 até 02/2022</p>
                     Realizava relatórios semanais para fazer um resumo dos
                     setores e enviá-los para cada um.
@@ -165,30 +172,34 @@
                 <!-- Informações Complementares -->
                 <span class="top-right"></span>
                 <h2>Informações Complementares</h2>
-                <strong>Associação Obra do berço:</strong>
-                <ol>
-                  <li>Voluntariado.</li>
+                <ul>
                   <li>
-                    Participação de Mentoria:
-                    <ul>
-                      <li><p>Instituto InterCement</p></li>
-                    </ul>
-                  </li>
-                  <li>
-                    Observatóiros corporativos:
-                    <ul>
-                      <li><p>Alpargatas</p></li>
-                      <li><p>Faculdade de Tecnologia SENAI Anchieta</p></li>
+                    <strong>Associação Obra do berço:</strong>
+                    <ol>
+                      <li>Voluntariado.</li>
                       <li>
-                        <p>
-                          Faculdade de Produção Têxtil e Vestuário SENAI
-                          Francisco Matarazzo
-                        </p>
+                        Participação de Mentoria:
+                        <ul>
+                          <li><p>Instituto InterCement</p></li>
+                        </ul>
                       </li>
-                      <li><p>Rádio Gazeta (Faculdade Cásper Líbero)</p></li>
-                    </ul>
+                      <li>
+                        Observatóiros corporativos:
+                        <ul>
+                          <li><p>Alpargatas</p></li>
+                          <li><p>Faculdade de Tecnologia SENAI Anchieta</p></li>
+                          <li>
+                            <p>
+                              Faculdade de Produção Têxtil e Vestuário SENAI
+                              Francisco Matarazzo
+                            </p>
+                          </li>
+                          <li><p>Rádio Gazeta (Faculdade Cásper Líbero)</p></li>
+                        </ul>
+                      </li>
+                    </ol>
                   </li>
-                </ol>
+                </ul>
                 <span class="bottom-left"></span>
               </section>
             </div>
