--- a/index.html
+++ b/index.html
@@ -38,19 +38,18 @@
 
             <div class="column column-right">
               <h1>Juan Rafael Xavier Pinheiro de Oliveira</h1>
-              <p>Estudante de Tecnologia da Informação</p>
+              <p>Análise e Desenvolvimento de Sistemas</p>
 
               <ul>
                 <li>
-                  <a href="mailto:juanrafaelxpo.servicos@gmail.com"
-                    ><strong>E-mail: </strong
-                    >juanrafaelxpo.servicos@gmail.com</a
-                  >
+                  <a href="mailto:juanrafaelxpo.servicos@gmail.com">
+                    <strong>E-mail: </strong>juanrafaelxpo.servicos@gmail.com
+                  </a>
                 </li>
                 <li>
-                  <a href="https://api.whatsapp.com/send?phone=5511989936942"
-                    ><strong>WhatsApp: </strong>(11) 98993-6942</a
-                  >
+                  <a href="https://api.whatsapp.com/send?phone=5511989936942">
+                    <strong>WhatsApp: </strong>(11) 98993-6942
+                  </a>
                 </li>
               </ul>
             </div>
@@ -62,72 +61,63 @@
         <div class="container">
           <div class="row">
             <div class="column column-left">
+              <!-- >Perfil Profissional -->
               <section>
-                <!-- >Perfil Profissional -->
                 <span class="top-right"></span>
                 <h2>Objetivo</h2>
                 <ul>
-                  <li>Assistente Administrativo</li>
-                  <li>Tecnologia da Informação</li>
+                  <li>Analista Administrativo;</li>
+                  <li>Consultor Comercial;</li>
+                  <li>Tecnologia da Informação;</li>
                 </ul>
                 <span class="bottom-left"></span>
               </section>
 
+              <!-- Conhecimentos -->
               <section>
-                <!-- Conhecimentos -->
                 <span class="top-right"></span>
                 <h2>Conhecimentos</h2>
                 <ul>
-                  <li>Python</li>
-                  <li>Pacote Office</li>
-                  <li>Desenvolvedor Front-End</li>
-                  <li>ReactJs</li>
+                  <li>Pacote Office;</li>
+                  <li>Análise de Dados;</li>
+                  <li>Tecnologia da Informação;</li>
                 </ul>
                 <span class="bottom-left"></span>
               </section>
 
+              <!-- Formação Acadêmica -->
               <section>
-                <!-- Formação Acadêmica -->
                 <span class="top-right"></span>
                 <h2>Formação Acadêmica</h2>
                 <ul>
                   <li>
-                    <strong
-                      >Superior de Análise e Desenvolvimento de Sistemas
-                      (cursando)</strong
-                    >
-                    <p>02/2025 até 11/2026</p>
-                    <p>Cursando: 1° Semestre</p>
+                    <strong>Superior de Análise e Desenvolvimento de Sistemas (cursando)</strong>
+                    <p>02/2025 até 12/2026</p>
+                    <p id="texto-semestre">Erro Java Script...</p>
                     <p>Universidade Cruzeiro do Sul Virtual</p>
                   </li>
+
                   <li>
-                    <strong>Ensino Médio Completo - 2018</strong>
-                    <p>
-                      Escola Estádual Professor Flávio José Osório Negrini - SP
-                    </p>
+                    <strong>Ensino Médio</strong>
+                    <p>Completo - 2018</p>
                   </li>
                 </ul>
                 <span class="bottom-left"></span>
               </section>
 
+              <!-- Cursos -->
               <section>
-                <!-- Cursos -->
                 <span class="top-right"></span>
                 <h2>Cursos</h2>
                 <ul>
                   <li>
-                    Full Stack Impressionador - Hashtag Treinamentos (Cursando)
-                    <p>Carga horária: 229 Horas</p>
+                    <strong>Hashtag Treinamentos</strong> <br />
+                    Curso: Análise de Dados, Python, Full Stack
                   </li>
                   <li>
-                    Informática Empresarial - All Net
-                    <p>Carga horária: 120 Horas</p>
-                    <p>Concluído em 2020</p>
-                  </li>
-                  <li>
-                    Práticas Administrativas - Associação Obra do Berço
+                    <strong>Associação Obra do Berço</strong> <br />
+                    Curso: Práticas Administrativas
                     <p>Carga horária: 480 Horas</p>
-                    <p>Concluído em 2019</p>
                   </li>
                 </ul>
                 <span class="bottom-left"></span>
@@ -135,43 +125,47 @@
             </div>
 
             <div class="column column-right">
+              <!-- Experiência Profissional -->
               <section>
-                <!-- Experiência Profissional -->
                 <span class="top-right"></span>
                 <h2>Experiência Profissional</h2>
                 <ul>
                   <li>
-                    <strong
-                      >Ability Tecnologia - Vendedor PaP Tim UltraFibra</strong
-                    >
-                    <p>Inicio: 05/2024</p>
-                    Atendimento residencial para fornecimento de serviços de
-                    rede Wifi.
+                    <strong>
+                      Ability Tecnologia e Serviços S.A: <br />
+                      Vendedor PaP Tim UltraFibra
+                    </strong>
+
+                    <p>05/2024 até 11/2025</p>
+                    Atendimento a pessoas e residências para o fornecimento de internet residencial.
                   </li>
                   <li>
-                    <strong
-                      >Supermercado Supribem - Aprendiz Administrativo</strong
-                    >
+                    <strong>
+                      Supermercado Supribem: <br />
+                      Aprendiz Administrativo
+                    </strong>
+
                     <p>10/2022 até 02/2024</p>
-                    Administração de cadastro, atualização e remoção de
-                    mercadorias de venda.
+                    Administração de cadastro, atualização e remoção de mercadorias de venda.
                   </li>
                   <li>
-                    <strong
-                      >Batista Agronegócio - Assistente Administrativo</strong
-                    >
+                    <strong>
+                      Batista Agronegócio: <br />
+                      Assistente Administrativo
+                    </strong>
+
                     <p>08/2021 até 02/2022</p>
-                    Realizava relatórios semanais para fazer um resumo dos
-                    setores e enviá-los para cada um.
+                    Realizava resumos de informações diárias sobre os setores e entregava para cada um.
                   </li>
                 </ul>
                 <span class="bottom-left"></span>
               </section>
 
+              <!-- Informações Complementares -->
               <section>
-                <!-- Informações Complementares -->
                 <span class="top-right"></span>
                 <h2>Informações Complementares</h2>
+
                 <ul>
                   <li>
                     <strong>Associação Obra do berço:</strong>
@@ -183,6 +177,7 @@
                           <li><p>Instituto InterCement</p></li>
                         </ul>
                       </li>
+                      
                       <li>
                         Observatóiros corporativos:
                         <ul>
@@ -190,8 +185,7 @@
                           <li><p>Faculdade de Tecnologia SENAI Anchieta</p></li>
                           <li>
                             <p>
-                              Faculdade de Produção Têxtil e Vestuário SENAI
-                              Francisco Matarazzo
+                              Faculdade de Produção Têxtil e Vestuário SENAI Francisco Matarazzo
                             </p>
                           </li>
                           <li><p>Rádio Gazeta (Faculdade Cásper Líbero)</p></li>
@@ -219,7 +213,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.linkedin.com/in/juan-rafael-xavier-pinheiro-de-oliveira-13282a202/"
+                  href="https://www.linkedin.com/in/juanrafaelxpo/"
                   target="_blank"
                 >
                   <img src="./Assets/logo-linkedin.svg" alt="LinkedIn" />
@@ -238,5 +232,7 @@
         </div>
       </footer>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
