Ajuste de informacao

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <ul>
                   <li>Pacote Office;</li>
                   <li>Análise de Dados;</li>
-                  <li>Tecnologia da Informação;</li>
+                  <li>Desenvolvimento Web;</li>
                 </ul>
                 <span class="bottom-left"></span>
               </section>
